--- a/styles.css
+++ b/styles.css
@@ -221,4 +221,18 @@ section{
   .pdf-button:hover {
     transform: scale(1.1);
   }
+
+  textarea {
+    width: 100%;
+    height: 150px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: vertical;
+  }
+
+  textarea:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+}
   
